@@ -225,12 +225,6 @@ gtk_option_menu_init (GtkOptionMenu *option_menu)
   option_menu->menu_item = NULL;
   option_menu->width = 0;
   option_menu->height = 0;
-  /*
-   * Avoid centering the label that is reparented from the menuitem.
-   * Since gobject doesn't support overriding default values of
-   * properties in a convenient way yet, we simply set the value here.
-   */
-  gtk_button_set_alignment (GTK_BUTTON (option_menu), 0.0, 0.5);
 }
 
 GtkWidget*
